[gd_scene load_steps=7 format=3 uid="uid://2u2wu1vk8qex"]

[ext_resource type="Texture2D" uid="uid://7qf8pcijso58" path="res://entities/environment/test_level/track_palette.png" id="1_j5pv2"]
[ext_resource type="Script" path="res://entities/environment/track_1/track_1.gd" id="1_qv888"]
[ext_resource type="PackedScene" uid="uid://qagomij3ohoo" path="res://scenes/player/car.tscn" id="2_b1v0u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yca8c"]
texture = ExtResource("1_j5pv2")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_fdef0"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_yca8c")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0bgt"]
size = Vector2(27, 128)

[node name="Track1" type="Node2D"]
script = ExtResource("1_qv888")
player_car = ExtResource("2_b1v0u")

[node name="Tilemaps" type="Node" parent="."]

[node name="TestCourse" type="TileMap" parent="."]
position = Vector2(2304, 372)
tile_set = SubResource("TileSet_fdef0")
format = 2
layer_0/z_index = -2
layer_0/tile_data = PackedInt32Array(-786513, 1, 0, -786512, 1, 0, -786511, 1, 0, -786510, 1, 0, -786509, 1, 0, -786508, 1, 0, -786507, 1, 0, -786506, 1, 0, -786505, 1, 0, -786504, 1, 0, -786503, 1, 0, -786502, 1, 0, -786501, 1, 0, -786500, 1, 0, -786499, 1, 0, -786498, 1, 0, -786497, 1, 0, -786496, 1, 0, -720977, 1, 0, -720976, 1, 0, -720975, 1, 0, -720974, 1, 0, -720973, 1, 0, -720972, 1, 0, -720971, 1, 0, -720970, 1, 0, -720969, 1, 0, -720968, 1, 0, -720967, 1, 0, -720966, 1, 0, -720965, 1, 0, -720964, 1, 0, -720963, 1, 0, -720962, 1, 0, -720961, 1, 0, -720960, 1, 0, -655441, 1, 0, -655440, 1, 0, -655439, 1, 0, -655438, 1, 0, -655437, 1, 0, -655436, 1, 0, -655435, 1, 0, -655434, 1, 0, -655433, 1, 0, -655432, 1, 0, -655431, 1, 0, -655430, 1, 0, -655429, 1, 0, -655428, 1, 0, -655427, 1, 0, -655426, 1, 0, -655425, 1, 0, -655424, 1, 0, -852050, 1, 0, -917587, 1, 0, -983124, 1, 0, -917588, 1, 0, -852052, 1, 0, -786516, 1, 0, -720980, 1, 0, -655444, 1, 0, -589908, 1, 0, -524372, 1, 0, -589906, 1, 0, -524371, 1, 0, -458836, 1, 0, -589907, 1, 0, -655443, 1, 0, -720979, 1, 0, -786515, 1, 0, -852051, 1, 0, -786514, 1, 0, -720978, 1, 0, -655442, 1, 0, -852031, 1, 0, -786495, 1, 0, -720959, 1, 0, -655423, 1, 0, -589887, 1, 0, -917566, 1, 0, -852030, 1, 0, -786494, 1, 0, -720958, 1, 0, -655422, 1, 0, -589886, 1, 0, -524350, 1, 0, -983101, 1, 0, -917565, 1, 0, -852029, 1, 0, -786493, 1, 0, -720957, 1, 0, -655421, 1, 0, -589885, 1, 0, -524349, 1, 0, -458813, 1, 0, -131133, 1, 0, -131134, 1, 0, -131135, 1, 0, -131136, 1, 0, -131137, 1, 0, -131138, 1, 0, -131139, 1, 0, -131140, 1, 0, -131141, 1, 0, -131142, 1, 0, -131143, 1, 0, -131144, 1, 0, -131145, 1, 0, -131146, 1, 0, -131147, 1, 0, -131148, 1, 0, -131149, 1, 0, -131150, 1, 0, -131151, 1, 0, -131152, 1, 0, -131153, 1, 0, -131154, 1, 0, -131155, 1, 0, -131156, 1, 0, -327753, 1, 0, -327752, 1, 0, -262218, 1, 0, -262217, 1, 0, -262216, 1, 0, -262215, 1, 0, -196683, 1, 0, -196682, 1, 0, -196681, 1, 0, -196680, 1, 0, -196679, 1, 0, -196678, 1, 0, -131157, 1, 0, -131158, 1, 0, -131159, 1, 0, -131160, 1, 0, -131161, 1, 0, -131162, 1, 0, -131163, 1, 0, -131164, 1, 0, -131165, 1, 0, -131166, 1, 0, -131132, 1, 0, -131131, 1, 0, -131130, 1, 0, -131129, 1, 0, -131128, 1, 0, -131127, 1, 0, -131126, 1, 0, -131125, 1, 0, -131124, 1, 0, -131123, 1, 0, -196659, 1, 0, -262194, 1, 0, -196702, 1, 0, -262239, 1, 0, -1310804, 1, 0, -1310805, 1, 0, -1310806, 1, 0, -1310807, 1, 0, -1310808, 1, 0, -1310809, 1, 0, -1310810, 1, 0, -1310811, 1, 0, -1310812, 1, 0, -1310813, 1, 0, -1310814, 1, 0, -1245278, 1, 0, -1179743, 1, 0, -1310803, 1, 0, -1310802, 1, 0, -1310801, 1, 0, -1310800, 1, 0, -1310799, 1, 0, -1310798, 1, 0, -1310797, 1, 0, -1310796, 1, 0, -1310795, 1, 0, -1310794, 1, 0, -1310793, 1, 0, -1310792, 1, 0, -1310791, 1, 0, -1310790, 1, 0, -1310789, 1, 0, -1310788, 1, 0, -1310787, 1, 0, -1310786, 1, 0, -1310785, 1, 0, -1310784, 1, 0, -1310783, 1, 0, -1310782, 1, 0, -1310781, 1, 0, -1310780, 1, 0, -1310779, 1, 0, -1310778, 1, 0, -1310777, 1, 0, -1310776, 1, 0, -1310775, 1, 0, -1310774, 1, 0, -1310773, 1, 0, -1310772, 1, 0, -1310771, 1, 0, -1245235, 1, 0, -1179698, 1, 0, -1114162, 1, 0, -1048626, 1, 0, -983090, 1, 0, -917554, 1, 0, -852018, 1, 0, -786482, 1, 0, -720946, 1, 0, -655410, 1, 0, -589874, 1, 0, -524338, 1, 0, -458802, 1, 0, -393266, 1, 0, -327730, 1, 0, -327775, 1, 0, -393311, 1, 0, -458847, 1, 0, -524383, 1, 0, -589919, 1, 0, -655455, 1, 0, -720991, 1, 0, -786527, 1, 0, -852063, 1, 0, -917599, 1, 0, -983135, 1, 0, -1048671, 1, 0, -1114207, 1, 0, -1114185, 1, 0, -1114184, 1, 0, -1179722, 1, 0, -1179721, 1, 0, -1179720, 1, 0, -1179719, 1, 0, -1245259, 1, 0, -1245258, 1, 0, -1245257, 1, 0, -1245256, 1, 0, -1245255, 1, 0, -1245254, 1, 0, -1179742, 1, 0, -1245277, 1, 0, -262238, 1, 0, -196701, 1, 0, -262195, 1, 0, -196660, 1, 0, -1179699, 1, 0, -1245236, 1, 0, -524376, 65537, 1, -589912, 65537, 1, -655448, 65537, 1, -720984, 65537, 1, -786520, 65537, 1, -852056, 65537, 1, -917592, 65537, 1, -983128, 65537, 1, -1048664, 65537, 1, -1114200, 65537, 1, -1179736, 65537, 1, -1245272, 65537, 1, -1245273, 65537, 1, -1245274, 65537, 1, -1245275, 65537, 1, -1245276, 65537, 1, -1179740, 65537, 1, -1179741, 65537, 1, -1114205, 65537, 1, -1114206, 65537, 1, -1048670, 65537, 1, -983134, 65537, 1, -917598, 65537, 1, -852062, 65537, 1, -786526, 65537, 1, -720990, 65537, 1, -655454, 65537, 1, -589918, 65537, 1, -524382, 65537, 1, -458846, 65537, 1, -393310, 65537, 1, -327774, 65537, 1, -327773, 65537, 1, -393309, 65537, 1, -458845, 65537, 1, -524381, 65537, 1, -589917, 65537, 1, -655453, 65537, 1, -720989, 65537, 1, -786525, 65537, 1, -852061, 65537, 1, -917597, 65537, 1, -983133, 65537, 1, -1048669, 65537, 1, -1048668, 65537, 1, -1114204, 65537, 1, -1114203, 65537, 1, -1179739, 65537, 1, -1179738, 65537, 1, -1114202, 65537, 1, -1048666, 65537, 1, -1048667, 65537, 1, -983131, 65537, 1, -983132, 65537, 1, -917596, 65537, 1, -852060, 65537, 1, -786524, 65537, 1, -720988, 65537, 1, -655452, 65537, 1, -589916, 65537, 1, -524380, 65537, 1, -458844, 65537, 1, -393308, 65537, 1, -327772, 65537, 1, -262236, 65537, 1, -262237, 65537, 1, -196700, 65537, 1, -196699, 65537, 1, -262235, 65537, 1, -327771, 65537, 1, -393307, 65537, 1, -458843, 65537, 1, -524379, 65537, 1, -589915, 65537, 1, -655451, 65537, 1, -720987, 65537, 1, -786523, 65537, 1, -852059, 65537, 1, -917595, 65537, 1, -917594, 65537, 1, -983130, 65537, 1, -983129, 65537, 1, -1048665, 65537, 1, -1114201, 65537, 1, -1179737, 65537, 1, -917593, 65537, 1, -852057, 65537, 1, -852058, 65537, 1, -786522, 65537, 1, -720986, 65537, 1, -655450, 65537, 1, -589914, 65537, 1, -524378, 65537, 1, -458842, 65537, 1, -393306, 65537, 1, -327770, 65537, 1, -262234, 65537, 1, -196698, 65537, 1, -196697, 65537, 1, -262233, 65537, 1, -327769, 65537, 1, -393305, 65537, 1, -458841, 65537, 1, -524377, 65537, 1, -589913, 65537, 1, -655449, 65537, 1, -720985, 65537, 1, -786521, 65537, 1, -458840, 65537, 1, -393304, 65537, 1, -327768, 65537, 1, -262232, 65537, 1, -196696, 65537, 1, -196695, 65537, 1, -262231, 65537, 1, -327767, 65537, 1, -393303, 65537, 1, -458839, 65537, 1, -524375, 65537, 1, -589911, 65537, 1, -655447, 65537, 1, -720983, 65537, 1, -786519, 65537, 1, -852055, 65537, 1, -917591, 65537, 1, -983127, 65537, 1, -1048663, 65537, 1, -1114199, 65537, 1, -1179735, 65537, 1, -1245271, 65537, 1, -1245270, 65537, 1, -1179734, 65537, 1, -1114198, 65537, 1, -1048662, 65537, 1, -983126, 65537, 1, -917590, 65537, 1, -852054, 65537, 1, -786518, 65537, 1, -720982, 65537, 1, -655446, 65537, 1, -589910, 65537, 1, -524374, 65537, 1, -458838, 65537, 1, -393302, 65537, 1, -327766, 65537, 1, -262230, 65537, 1, -196694, 65537, 1, -196693, 65537, 1, -262229, 65537, 1, -327765, 65537, 1, -393301, 65537, 1, -458837, 65537, 1, -524373, 65537, 1, -589909, 65537, 1, -655445, 65537, 1, -720981, 65537, 1, -786517, 65537, 1, -852053, 65537, 1, -917589, 65537, 1, -983125, 65537, 1, -1048661, 65537, 1, -1114197, 65537, 1, -1179733, 65537, 1, -1245269, 65537, 1, -1245268, 65537, 1, -1179732, 65537, 1, -1114196, 65537, 1, -1048660, 65537, 1, -1048659, 65537, 1, -1114195, 65537, 1, -1179731, 65537, 1, -1245267, 65537, 1, -1245266, 65537, 1, -1179730, 65537, 1, -1114194, 65537, 1, -1048658, 65537, 1, -983122, 65537, 1, -983123, 65537, 1, -917586, 65537, 1, -917585, 65537, 1, -983121, 65537, 1, -1048657, 65537, 1, -1114193, 65537, 1, -1179729, 65537, 1, -1245265, 65537, 1, -1245264, 65537, 1, -1179728, 65537, 1, -1114192, 65537, 1, -1048656, 65537, 1, -983120, 65537, 1, -917584, 65537, 1, -852048, 65537, 1, -852049, 65537, 1, -852047, 65537, 1, -917583, 65537, 1, -983119, 65537, 1, -1048655, 65537, 1, -1114191, 65537, 1, -1179727, 65537, 1, -1245263, 65537, 1, -1245262, 65537, 1, -1179726, 65537, 1, -1114190, 65537, 1, -1048654, 65537, 1, -983118, 65537, 1, -917582, 65537, 1, -852046, 65537, 1, -852045, 65537, 1, -917581, 65537, 1, -983117, 65537, 1, -1048653, 65537, 1, -1114189, 65537, 1, -1179725, 65537, 1, -1245261, 65537, 1, -1245260, 65537, 1, -1179724, 65537, 1, -1114188, 65537, 1, -1048652, 65537, 1, -983116, 65537, 1, -917580, 65537, 1, -852044, 65537, 1, -852043, 65537, 1, -917579, 65537, 1, -983115, 65537, 1, -1048651, 65537, 1, -1114187, 65537, 1, -1179723, 65537, 1, -1114186, 65537, 1, -1048650, 65537, 1, -983114, 65537, 1, -917578, 65537, 1, -852042, 65537, 1, -852041, 65537, 1, -917577, 65537, 1, -983113, 65537, 1, -1048649, 65537, 1, -1048648, 65537, 1, -983112, 65537, 1, -917576, 65537, 1, -852040, 65537, 1, -852039, 65537, 1, -917575, 65537, 1, -983111, 65537, 1, -1048647, 65537, 1, -1114183, 65537, 1, -1114182, 65537, 1, -1179718, 65537, 1, -1179717, 65537, 1, -1245253, 65537, 1, -1245252, 65537, 1, -1179716, 65537, 1, -1114180, 65537, 1, -1114181, 65537, 1, -1048645, 65537, 1, -1048646, 65537, 1, -983110, 65537, 1, -917574, 65537, 1, -852038, 65537, 1, -852037, 65537, 1, -917573, 65537, 1, -983109, 65537, 1, -983108, 65537, 1, -1048644, 65537, 1, -1048643, 65537, 1, -1114179, 65537, 1, -1179715, 65537, 1, -1245251, 65537, 1, -1245250, 65537, 1, -1179714, 65537, 1, -1114178, 65537, 1, -1048642, 65537, 1, -983106, 65537, 1, -983107, 65537, 1, -917571, 65537, 1, -917572, 65537, 1, -852036, 65537, 1, -852035, 65537, 1, -852034, 65537, 1, -917570, 65537, 1, -917569, 65537, 1, -983105, 65537, 1, -1048641, 65537, 1, -1114177, 65537, 1, -1179713, 65537, 1, -1245249, 65537, 1, -1245248, 65537, 1, -1179712, 65537, 1, -1114176, 65537, 1, -1048640, 65537, 1, -983104, 65537, 1, -917568, 65537, 1, -852032, 65537, 1, -852033, 65537, 1, -917567, 65537, 1, -983103, 65537, 1, -1048639, 65537, 1, -1114175, 65537, 1, -1179711, 65537, 1, -1245247, 65537, 1, -1245246, 65537, 1, -1179710, 65537, 1, -1114174, 65537, 1, -1048638, 65537, 1, -983102, 65537, 1, -1048637, 65537, 1, -1114173, 65537, 1, -1179709, 65537, 1, -1245245, 65537, 1, -1245244, 65537, 1, -1179708, 65537, 1, -1114172, 65537, 1, -1048636, 65537, 1, -983100, 65537, 1, -917564, 65537, 1, -852028, 65537, 1, -786492, 65537, 1, -720956, 65537, 1, -655420, 65537, 1, -589884, 65537, 1, -524348, 65537, 1, -458812, 65537, 1, -393276, 65537, 1, -393277, 65537, 1, -393278, 65537, 1, -458814, 65537, 1, -458815, 65537, 1, -524351, 65537, 1, -524352, 65537, 1, -589888, 65537, 1, -589889, 65537, 1, -589890, 65537, 1, -589891, 65537, 1, -589892, 65537, 1, -589893, 65537, 1, -589894, 65537, 1, -589895, 65537, 1, -589896, 1, 1, -589897, 65537, 1, -589898, 65537, 1, -589899, 65537, 1, -589900, 65537, 1, -589901, 65537, 1, -589902, 65537, 1, -589903, 65537, 1, -589904, 65537, 1, -589905, 65537, 1, -524369, 65537, 1, -524370, 65537, 1, -458834, 65537, 1, -458835, 65537, 1, -393299, 65537, 1, -393300, 65537, 1, -327764, 65537, 1, -262228, 65537, 1, -196692, 65537, 1, -196691, 65537, 1, -262227, 65537, 1, -327763, 65537, 1, -327762, 65537, 1, -393298, 65537, 1, -393297, 65537, 1, -458833, 65537, 1, -458832, 65537, 1, -524368, 65537, 1, -524367, 65537, 1, -458831, 65537, 1, -393295, 65537, 1, -393296, 65537, 1, -327760, 65537, 1, -327761, 65537, 1, -262225, 65537, 1, -262226, 65537, 1, -196690, 65537, 1, -196689, 65537, 1, -196688, 65537, 1, -262224, 65537, 1, -262223, 65537, 1, -327759, 65537, 1, -327758, 65537, 1, -393294, 65537, 1, -458830, 65537, 1, -524366, 65537, 1, -524365, 65537, 1, -458829, 65537, 1, -393293, 65537, 1, -327757, 65537, 1, -262221, 65537, 1, -262222, 65537, 1, -196686, 65537, 1, -196687, 65537, 1, -196685, 65537, 1, -196684, 65537, 1, -262220, 65537, 1, -327756, 65537, 1, -393292, 65537, 1, -458828, 65537, 1, -524364, 65537, 1, -524363, 65537, 1, -458827, 65537, 1, -393291, 65537, 1, -327755, 65537, 1, -262219, 65537, 1, -327754, 65537, 1, -393290, 65537, 1, -458826, 65537, 1, -524362, 65537, 1, -524361, 1, 1, -458825, 65537, 1, -393289, 1, 1, -393288, 65537, 1, -458824, 1, 1, -524360, 65537, 1, -524359, 65537, 1, -458823, 65537, 1, -393287, 65537, 1, -327751, 65537, 1, -327750, 65537, 1, -393286, 65537, 1, -458822, 65537, 1, -524358, 65537, 1, -524357, 65537, 1, -458821, 65537, 1, -393285, 65537, 1, -327749, 65537, 1, -262213, 65537, 1, -262214, 65537, 1, -196677, 65537, 1, -196676, 65537, 1, -262212, 65537, 1, -327748, 65537, 1, -393284, 65537, 1, -458820, 65537, 1, -524356, 65537, 1, -524355, 65537, 1, -458819, 65537, 1, -393283, 65537, 1, -327747, 65537, 1, -262211, 65537, 1, -196675, 65537, 1, -196674, 65537, 1, -262210, 65537, 1, -327746, 65537, 1, -393282, 65537, 1, -458818, 65537, 1, -524354, 65537, 1, -524353, 65537, 1, -458817, 65537, 1, -393281, 65537, 1, -327745, 65537, 1, -262209, 65537, 1, -196673, 65537, 1, -196672, 65537, 1, -262208, 65537, 1, -327744, 65537, 1, -393280, 65537, 1, -458816, 65537, 1, -393279, 65537, 1, -327743, 65537, 1, -262207, 65537, 1, -196671, 65537, 1, -196670, 65537, 1, -262206, 65537, 1, -327742, 65537, 1, -327741, 65537, 1, -262205, 65537, 1, -196669, 65537, 1, -196668, 65537, 1, -262204, 65537, 1, -327740, 65537, 1, -327739, 65537, 1, -393275, 65537, 1, -458811, 65537, 1, -524347, 65537, 1, -589883, 65537, 1, -655419, 65537, 1, -720955, 65537, 1, -786491, 65537, 1, -852027, 65537, 1, -917563, 65537, 1, -983099, 65537, 1, -1048635, 65537, 1, -1114171, 65537, 1, -1179707, 65537, 1, -1245243, 65537, 1, -1245242, 65537, 1, -1179706, 65537, 1, -1114170, 65537, 1, -1048634, 65537, 1, -983098, 65537, 1, -917562, 65537, 1, -852026, 65537, 1, -786490, 65537, 1, -720954, 65537, 1, -655418, 65537, 1, -589882, 65537, 1, -524346, 65537, 1, -458810, 65537, 1, -393274, 65537, 1, -327738, 65537, 1, -262202, 65537, 1, -262203, 65537, 1, -196667, 65537, 1, -196666, 65537, 1, -196665, 65537, 1, -262201, 65537, 1, -327737, 65537, 1, -393273, 65537, 1, -458809, 65537, 1, -524345, 65537, 1, -589881, 65537, 1, -655417, 65537, 1, -720953, 65537, 1, -786489, 65537, 1, -852025, 65537, 1, -917561, 65537, 1, -983097, 65537, 1, -1048633, 65537, 1, -1114169, 65537, 1, -1179705, 65537, 1, -1245241, 65537, 1, -1245240, 65537, 1, -1179704, 65537, 1, -1114168, 65537, 1, -1048632, 65537, 1, -983096, 65537, 1, -917560, 65537, 1, -852024, 65537, 1, -786488, 65537, 1, -720952, 65537, 1, -655416, 65537, 1, -589880, 65537, 1, -524344, 65537, 1, -458808, 65537, 1, -393272, 65537, 1, -327736, 65537, 1, -262200, 65537, 1, -196664, 65537, 1, -196663, 65537, 1, -262199, 65537, 1, -327735, 65537, 1, -393271, 65537, 1, -458807, 65537, 1, -524343, 65537, 1, -589879, 65537, 1, -655415, 65537, 1, -720951, 65537, 1, -786487, 65537, 1, -852023, 65537, 1, -917559, 65537, 1, -983095, 65537, 1, -1048631, 65537, 1, -1114167, 65537, 1, -1179703, 65537, 1, -1245239, 65537, 1, -1245238, 65537, 1, -1179702, 65537, 1, -1114166, 65537, 1, -1048630, 65537, 1, -983094, 65537, 1, -917558, 65537, 1, -852022, 65537, 1, -786486, 65537, 1, -720950, 65537, 1, -655414, 65537, 1, -589878, 65537, 1, -524342, 65537, 1, -458806, 65537, 1, -393270, 65537, 1, -327734, 65537, 1, -262198, 65537, 1, -196662, 65537, 1, -196661, 65537, 1, -262197, 65537, 1, -327733, 65537, 1, -393269, 65537, 1, -458805, 65537, 1, -524341, 65537, 1, -589877, 65537, 1, -655413, 65537, 1, -720949, 65537, 1, -786485, 65537, 1, -852021, 65537, 1, -917557, 65537, 1, -983093, 65537, 1, -1048629, 65537, 1, -1114165, 65537, 1, -1179701, 65537, 1, -1245237, 65537, 1, -1179700, 65537, 1, -1114164, 65537, 1, -1048628, 65537, 1, -983092, 65537, 1, -917556, 65537, 1, -852020, 65537, 1, -786484, 65537, 1, -720948, 65537, 1, -655412, 65537, 1, -589876, 65537, 1, -524340, 65537, 1, -458804, 65537, 1, -393268, 65537, 1, -327732, 65537, 1, -262196, 65537, 1, -327731, 65537, 1, -393267, 65537, 1, -458803, 65537, 1, -524339, 65537, 1, -589875, 65537, 1, -655411, 65537, 1, -720947, 65537, 1, -786483, 65537, 1, -852019, 65537, 1, -917555, 65537, 1, -983091, 65537, 1, -1048627, 65537, 1, -1114163, 65537, 1, -1376352, 1, 0, -65632, 1, 0, -65585, 1, 0, -1376305, 1, 0, -1376306, 1, 0, -1376307, 1, 0, -1376308, 1, 0, -1376309, 1, 0, -1376310, 1, 0, -1376311, 1, 0, -1376312, 1, 0, -1376313, 1, 0, -1376314, 1, 0, -1376315, 1, 0, -1376316, 1, 0, -1376317, 1, 0, -1376318, 1, 0, -1376319, 1, 0, -1376320, 1, 0, -1376321, 1, 0, -1376322, 1, 0, -1376323, 1, 0, -1376324, 1, 0, -1376325, 1, 0, -1376326, 1, 0, -1376327, 1, 0, -1376328, 1, 0, -1376329, 1, 0, -1376330, 1, 0, -1376331, 1, 0, -1376332, 1, 0, -1376333, 1, 0, -1376334, 1, 0, -1376335, 1, 0, -1376336, 1, 0, -1376337, 1, 0, -1376338, 1, 0, -1376339, 1, 0, -1376340, 1, 0, -1376341, 1, 0, -1376342, 1, 0, -1376343, 1, 0, -1376344, 1, 0, -1376345, 1, 0, -1376346, 1, 0, -1376347, 1, 0, -1376348, 1, 0, -1376349, 1, 0, -1376350, 1, 0, -1376351, 1, 0, -1310816, 1, 0, -1245280, 1, 0, -1179744, 1, 0, -1114208, 1, 0, -1048672, 1, 0, -983136, 1, 0, -917600, 1, 0, -852064, 1, 0, -786528, 1, 0, -720992, 1, 0, -655456, 1, 0, -589920, 1, 0, -524384, 1, 0, -458848, 1, 0, -393312, 1, 0, -327776, 1, 0, -262240, 1, 0, -196704, 1, 0, -131168, 1, 0, -65631, 1, 0, -65630, 1, 0, -65629, 1, 0, -65628, 1, 0, -65627, 1, 0, -65626, 1, 0, -65625, 1, 0, -65624, 1, 0, -65623, 1, 0, -65622, 1, 0, -65621, 1, 0, -65620, 1, 0, -65619, 1, 0, -65618, 1, 0, -65617, 1, 0, -65616, 1, 0, -65615, 1, 0, -65614, 1, 0, -65613, 1, 0, -65612, 1, 0, -65611, 1, 0, -65610, 1, 0, -65609, 1, 0, -65608, 1, 0, -65607, 1, 0, -65606, 1, 0, -65605, 1, 0, -65604, 1, 0, -65603, 1, 0, -65602, 1, 0, -65601, 1, 0, -65600, 1, 0, -65599, 1, 0, -65598, 1, 0, -65597, 1, 0, -65596, 1, 0, -65595, 1, 0, -65594, 1, 0, -65593, 1, 0, -65592, 1, 0, -65591, 1, 0, -65590, 1, 0, -65589, 1, 0, -65588, 1, 0, -65587, 1, 0, -65586, 1, 0, -131121, 1, 0, -196657, 1, 0, -262193, 1, 0, -327729, 1, 0, -393265, 1, 0, -458801, 1, 0, -524337, 1, 0, -589873, 1, 0, -655409, 1, 0, -720945, 1, 0, -786481, 1, 0, -852017, 1, 0, -917553, 1, 0, -983089, 1, 0, -1048625, 1, 0, -1114161, 1, 0, -1179697, 1, 0, -1245233, 1, 0, -1310769, 1, 0, -1310770, 1, 0, -1245234, 1, 0, -131122, 1, 0, -196658, 1, 0, -131167, 1, 0, -196703, 1, 0, -1310815, 1, 0, -1245279, 1, 0)

[node name="Camera2D" type="Camera2D" parent="TestCourse"]
position = Vector2(-2305, -366)
scale = Vector2(5.12259, 6.71481)

[node name="Player" type="Node" parent="."]

[node name="CarStartMarker" type="Marker2D" parent="Player"]
position = Vector2(438, 176)

[node name="Checkpoints" type="Node" parent="." groups=["checkpoints"]]

[node name="Start" type="Area2D" parent="Checkpoints"]
unique_name_in_owner = true
position = Vector2(-1, 109)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoints/Start"]
unique_name_in_owner = true
position = Vector2(0.5, 7)
shape = SubResource("RectangleShape2D_d0bgt")

[node name="One" type="Area2D" parent="Checkpoints"]
position = Vector2(-526, 0)
rotation = 1.57079
scale = Vector2(1, 2.52)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoints/One"]
position = Vector2(0.5, 7)
shape = SubResource("RectangleShape2D_d0bgt")

[node name="Two" type="Area2D" parent="Checkpoints"]
position = Vector2(1, -115)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoints/Two"]
position = Vector2(0.5, 7)
shape = SubResource("RectangleShape2D_d0bgt")

[node name="Three" type="Area2D" parent="Checkpoints"]
position = Vector2(562, -1)
rotation = 1.57079
scale = Vector2(1, 2.52)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoints/Three"]
position = Vector2(0.5, 7)
shape = SubResource("RectangleShape2D_d0bgt")

[connection signal="body_entered" from="Checkpoints/Start" to="." method="_on_start_body_entered"]
[connection signal="body_entered" from="Checkpoints/One" to="." method="_on_one_body_entered"]
[connection signal="body_entered" from="Checkpoints/Two" to="." method="_on_two_body_entered"]
[connection signal="body_entered" from="Checkpoints/Three" to="." method="_on_three_body_entered"]
